<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20sp"
    android:layout_marginTop="20sp"
    android:layout_marginRight="20sp"
    android:orientation="vertical"
    tools:context=".AgregarCarro">

    <TextView
        android:id="@+id/lblTituloAgregar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/agregar_carro"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtMarca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/marca_carro"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtModelo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/modelo_carro"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtAno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ano_carro"
        android:inputType="number" />

    <EditText
        android:id="@+id/txtCilindrada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/cilindrada_carro"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnGuardar"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_guardar" />

        <Button
            android:id="@+id/btnLimpiar"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_limpiar" />
    </LinearLayout>
</LinearLayout>