<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20sp"
    android:layout_marginBottom="10sp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10sp"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgFoto"
                android:layout_width="96dp"
                android:layout_height="96dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lblTituloMarca"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/marca_carro"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/lblTituloModelo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/modelo_carro"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/lblTituloAno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ano_carro"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/lblTituloCilindrada"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cilindrada_carro"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/lblTituloPlaca"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/placa_carro"
                    android:textSize="22sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                </LinearLayout>

                <TextView
                    android:id="@+id/lblMarca"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lblModelo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lblAno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lblCilindrada"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lblPlaca"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textSize="22sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>